kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
spec:
  type: ClusterIP
  selector:
    app: weather-api
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
